failed to decode NetFlow v9 packets including a 0 length scope field
This issue was migrated from bug 4381 in our old bug tracker.
Original bug information:
Reporter: Hitoshi Irino
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: Git
Attachments:
packet-netflow.c.scopebug.diff: A patch for decoding 0 length scope field
c36_nfv9opt.pcap: A pcap file of NetFlow v9 option template and data exported from Cisco 3620 12.3(22).
packet-netflow.c.v9option.patch: v9 options template patch for rev31735