From Hitoshi Irino: Failed to decode NetFlow v9 packets including a 0 length scope field. https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=4381

svn path=/trunk/; revision=31488